--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,27 @@
 .App {
   text-align: center;
+  background-color: black;
+  color: rgb(15, 15, 27);
+  text-align: right;
+  /* media queries */
+  @media (max-width: 767px) {
+    text-align: center;
+  }
+  @media (max-width: 400px) {
+    text-align: left;
+  }
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.title-bar {
+  background-color: black;
+  display: block;
+  padding-left: 16px;
+  color: aliceblue;
+  font-size: 24;
 }
 
 .App-header {
@@ -26,13 +37,4 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
